[package]
name = "rust_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.4", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"  # Added serde_json dependency
dotenvy = "0.15"
futures-util = "0.3"  
chrono = { version = "0.4", features = ["serde"] } 
